added examples grids

--- a/source/example-1.html
+++ b/source/example-1.html
@@ -10,16 +10,12 @@
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
-<main class="examples">
-    <h1 class="title">CSS Grid Examples</h1>
-    <nav class="examples-nav">
-        <a class="examples-nav__link" href="example-1.html">Example #1</a>
-        <a class="examples-nav__link" href="example-2.html">Example #2</a>
-        <a class="examples-nav__link" href="example-3.html">Example #3</a>
-        <a class="examples-nav__link" href="example-4.html">Example #4</a>
-        <a class="examples-nav__link" href="example-5.html">Example #5</a>
-    </nav>
-</main>
+
+//= ./components/example-one.html
+
+<div class="nav-links">
+    <a href="index.html">Home</a>
+</div>
 <script src="./libs/jquery.min.js"></script>
 <script src="app.js"></script>
 </body>
