--- a/source/example-5.html
+++ b/source/example-5.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>Grids Example</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow&amp;subset=cyrillic,cyrillic-ext,latin-ext"
-          rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Play:400,700&amp;subset=cyrillic,cyrillic-ext,latin-ext" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet">
     <link rel="stylesheet" href="libs/normalize.css">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
