--- a/source/index.html
+++ b/source/index.html
@@ -13,11 +13,12 @@
 <main class="examples">
     <h1 class="title">CSS Grid Examples</h1>
     <nav class="examples-nav">
-        <a class="examples-nav__link" href="example-1.html">Example #1</a>
-        <a class="examples-nav__link" href="example-2.html">Example #2</a>
-        <a class="examples-nav__link" href="example-3.html">Example #3</a>
-        <a class="examples-nav__link" href="example-4.html">Example #4</a>
-        <a class="examples-nav__link" href="example-5.html">Example #5</a>
+        <a class="examples-nav__link" href="example-1.html">Simple grid</a>
+        <a class="examples-nav__link" href="example-2.html">Layouts</a>
+        <a class="examples-nav__link" href="example-3.html">Positions</a>
+        <a class="examples-nav__link" href="example-4.html">Example #1</a>
+        <a class="examples-nav__link" href="example-5.html">Example #2</a>
+        <a class="examples-nav__link" href="example-6.html">Example #3</a>
     </nav>
 </main>
 <script src="./libs/jquery.min.js"></script>
