--- a/source/index.html
+++ b/source/index.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <title>Grids Example</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow&amp;subset=cyrillic,cyrillic-ext,latin-ext"
-          rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow&amp;subset=cyrillic,cyrillic-ext,latin-ext" rel="stylesheet">
     <link rel="stylesheet" href="libs/normalize.css">
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
 <main class="examples">
@@ -21,7 +20,7 @@
         <a class="examples-nav__link" href="example-6.html">Example #3</a>
     </nav>
 </main>
-<script src="./libs/jquery.min.js"></script>
-<script src="app.js"></script>
+<script src="libs/jquery.min.js"></script>
+<script src="js/script.min.js"></script>
 </body>
 </html>
